# memkindalloc

./: .gitignore  .gitmodules  Cargo.toml
memkindalloc/: Cargo.toml
memkindalloc-sys/: Cargo.toml  build.rs  wrapper.h
memkindalloc-sys/configure/: configure
memkindalloc-sys/src/: lib.rs  memkind_api.rs
memkindalloc/src/: lib.rs
