[package]
name = "memkindalloc-sys"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
cc = "^1.0.13"
bindgen = { version = "0.64", optional = true }

[features]
generate = ["bindgen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
